--- a/README.org
+++ b/README.org
@@ -1,1 +1,31 @@
 #+title: 🍮
+
+* Overview
+
+custard provides
+
+- [[file:custard.hpp]] a C++ interface to reading and writing tar streams
+  via ~std::ostream~ (or derived)
+
+- [[file:boost_custard.hpp]] ~boost::iostreams~ tar input (tbd) and output
+  filters.
+
+The filters follow a simple streaming protocol which is exposed to the
+application.  A custard tar stream has three parts:
+
+1. file name as stored in the archive (app should remove initial ~/~).
+2. file size measured in bytes and represented as ASCII.
+3. file body.
+
+The first and the second shall has a newline ~\n~ character appended.
+Note, the file body does not have an added newline.  Any number of
+files may be streamed by simply repeating these triplets.
+
+Additional tar metadata is set automatically and not currently
+configurable.
+
+* Todo
+
+- [ ] input filter
+
+- [ ] proper build/test/licensing
